# docs/swagger.yaml
@@ -18,6 +18,17 @@ definitions:
     - AccessModeRO
     - AccessModeRW
     - AccessModeAO
+  github_com_raids-lab_crater_dao_model.ApprovalOrderContent:
+    properties:
+      approvalorderExtensionHours:
+        description: 延长小时数
+        type: integer
+      approvalorderReason:
+        description: 审批原因
+        type: string
+      approvalorderTypeID:
+        type: integer
+    type: object
   github_com_raids-lab_crater_dao_model.ApprovalOrderStatus:
     enum:
     - Pending
@@ -166,6 +177,13 @@ definitions:
         description: UID and GID are used for Filesystem
         type: string
     type: object
+  github_com_raids-lab_crater_dao_model.UserInfo:
+    properties:
+      nickname:
+        type: string
+      username:
+        type: string
+    type: object
   github_com_raids-lab_crater_internal_payload.Order:
     enum:
     - asc
@@ -236,6 +254,15 @@ definitions:
         $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.ErrorCode'
       data:
         $ref: '#/definitions/github_com_raids-lab_crater_pkg_crclient.GPUInfo'
+      msg:
+        type: string
+    type: object
+  github_com_raids-lab_crater_internal_resputil.Response-internal_handler_ApprovalOrderResp:
+    properties:
+      code:
+        $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.ErrorCode'
+      data:
+        $ref: '#/definitions/internal_handler.ApprovalOrderResp'
       msg:
         type: string
     type: object
@@ -445,23 +472,48 @@ definitions:
       role:
         $ref: '#/definitions/github_com_raids-lab_crater_dao_model.Role'
     type: object
-  internal_handler.ApprovalOrderreq:
+  internal_handler.ApprovalOrderResp:
     properties:
-      extensionHours:
-        description: 延长小时数
+      content:
+        $ref: '#/definitions/github_com_raids-lab_crater_dao_model.ApprovalOrderContent'
+      createdAt:
+        type: string
+      creator:
+        $ref: '#/definitions/github_com_raids-lab_crater_dao_model.UserInfo'
+      creatorID:
+        type: integer
+      id:
         type: integer
       name:
         type: string
-      reason:
+      reviewNotes:
+        type: string
+      reviewer:
+        $ref: '#/definitions/github_com_raids-lab_crater_dao_model.UserInfo'
+      reviewerID:
+        type: integer
+      status:
+        $ref: '#/definitions/github_com_raids-lab_crater_dao_model.ApprovalOrderStatus'
+      type:
+        $ref: '#/definitions/github_com_raids-lab_crater_dao_model.ApprovalOrderType'
+    type: object
+  internal_handler.ApprovalOrderreq:
+    properties:
+      approvalOrderExtensionHours:
+        description: 延长小时数
+        type: integer
+      approvalOrderReason:
         description: 审批原因
+        type: string
+      approvalorderTypeID:
+        description: 关联的ID，可能是数据集或任务ID
+        type: integer
+      name:
         type: string
       status:
         $ref: '#/definitions/github_com_raids-lab_crater_dao_model.ApprovalOrderStatus'
       type:
         $ref: '#/definitions/github_com_raids-lab_crater_dao_model.ApprovalOrderType'
-      typeID:
-        description: 关联的ID，可能是数据集或任务ID
-        type: integer
     required:
     - name
     - type
@@ -647,13 +699,16 @@ definitions:
     type: object
   internal_handler.UpdateApprovalOrder:
     properties:
-      extensionHours:
+      approvalOrderExtensionHours:
         description: 延长小时数
         type: integer
-      name:
-        type: string
-      reason:
+      approvalOrderReason:
         description: 审批原因
+        type: string
+      approvalorderTypeID:
+        description: 关联的ID，可能是数据集或任务ID
+        type: integer
+      name:
         type: string
       reviewNotes:
         description: 审批备注
@@ -665,9 +720,6 @@ definitions:
         $ref: '#/definitions/github_com_raids-lab_crater_dao_model.ApprovalOrderStatus'
       type:
         $ref: '#/definitions/github_com_raids-lab_crater_dao_model.ApprovalOrderType'
-      typeID:
-        description: 关联的ID，可能是数据集或任务ID
-        type: integer
     required:
     - name
     - type
@@ -1517,6 +1569,41 @@ paths:
       security:
       - Bearer: []
       summary: 展示所有审批订单
+      tags:
+      - approvalorder
+  /v1/admin/approvalorder/{id}:
+    get:
+      consumes:
+      - application/json
+      description: 管理员通过ID获取任意审批工单详情
+      parameters:
+      - description: 工单ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功返回工单详情
+          schema:
+            $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.Response-internal_handler_ApprovalOrderResp'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.Response-any'
+        "404":
+          description: 工单不存在
+          schema:
+            $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.Response-any'
+        "500":
+          description: 服务器错误
+          schema:
+            $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.Response-any'
+      security:
+      - Bearer: []
+      summary: 管理员获取审批工单详情
       tags:
       - approvalorder
   /v1/admin/dataset/alldataset:
@@ -2402,8 +2489,7 @@ paths:
       consumes:
       - application/json
       description: This API will get the allocatable resources from the Kubernetes
-        cluster and update the database with the latest information. It will also
-        remove resources that no longer exist in the cluster.
+        cluster
       produces:
       - application/json
       responses:
@@ -2923,6 +3009,44 @@ paths:
       security:
       - Bearer: []
       summary: 删除审批工单
+      tags:
+      - approvalorder
+    get:
+      consumes:
+      - application/json
+      description: 通过ID获取审批工单详情（仅限创建者）
+      parameters:
+      - description: 工单ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功返回工单详情
+          schema:
+            $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.Response-internal_handler_ApprovalOrderResp'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.Response-any'
+        "403":
+          description: 权限不足
+          schema:
+            $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.Response-any'
+        "404":
+          description: 工单不存在
+          schema:
+            $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.Response-any'
+        "500":
+          description: 服务器错误
+          schema:
+            $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.Response-any'
+      security:
+      - Bearer: []
+      summary: 获取审批工单详情
       tags:
       - approvalorder
     put:
